--- a/index.css
+++ b/index.css
@@ -4,6 +4,8 @@ body {
   justify-content: center;
   height: 100vh;
   width: 100vw;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -16,7 +18,7 @@ a {
   align-items: center;
   flex: 0 0 auto;
   height: 100%;
-  min-width: 1024px;
+  min-width: 550px;
 }
 
 .canvas {
@@ -24,24 +26,25 @@ a {
   height: 100%;
   width: 100%;
   flex: 0 0 auto;
-  max-height: 576px;
+  max-height: 400px;
+  margin-top: 8px;
 }
 
-@media (min-width: 3840px) {
+@media (min-width: 720px) {
   .content {
-    min-width: 1920px;
+    min-width: 688px;
   }
   .canvas {
-    max-height: 1080px;
+    max-height: 500px;
   }
 }
 
-@media (min-width: 2560px) {
+@media (min-width: 1080px) {
   .content {
-    min-width: 1280px;
+    min-width: 1031px;
   }
   .canvas {
-    max-height: 720px;
+    max-height: 750px;
   }
 }
 
